experimenting with mirebalais reports surefire configuration in attempt to get build to pass