@@ -302,6 +302,16 @@
                     <artifactId>gem-maven-plugin</artifactId>
                     <version>1.0.0-rc4</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.17</version>
+                    <configuration>
+                        <forkCount>1C</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
